compiler/tests/compile-error/fn-lowering-errors.arret
(import [stdlib base])

(def _ (fn))
      ;^^^^ ERROR parameter declaration missing

(def _ (fn #{A}))
      ;^^^^^^^^^ ERROR parameter declaration missing

(def _ (fn []))
          ;^^ ERROR expected parameter declaration list, found empty vector

(def _ (fn #{123} ()))
            ;^^^ ERROR bad polymorphic variable declaration